--- a/src/styles/auth/index.module.css
+++ b/src/styles/auth/index.module.css
@@ -1,10 +1,10 @@
 .authContent {
-  border: 3px solid var(--border-color);
+  border: 2px solid var(--border-color);
   border-radius: var(--radius);
-  max-width: 600px;
-  padding: 55px 40px;
-  margin: 90px auto;
-  min-height: 690px;
+  max-width: 440px;
+  padding: 50px 30px;
+  margin: 90px auto 0 auto;
+  min-height: 560px;
 }
 
 .title {
@@ -15,14 +15,16 @@
   color: var(--main-color);
   font-weight: 600;
   margin-bottom: var(--space-sm);
-  font-size: 1.55rem;
+  font-size: 1.15rem;
 }
-
+.subTitleInner {
+  font-size: 0.8rem;
+}
 .account {
   margin-top: var(--space-lg);
   margin-bottom: 1.5rem;
   text-transform: capitalize;
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   font-weight: 400;
 }
 
