--- a/src/styles/auth/index.module.css
+++ b/src/styles/auth/index.module.css
@@ -1,10 +1,11 @@
 .authContent {
   border: 2px solid var(--border-color);
   border-radius: var(--radius);
-  max-width: 440px;
-  padding: 50px 30px;
-  margin: 90px auto 0 auto;
-  min-height: 560px;
+    margin: 65px auto 0;
+    max-width: 410px;
+    min-height: 537px;
+    padding: 44px 30px;
+
 }
 
 .title {
