--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,6 +20,10 @@
   --sidebar-width: 300px;
   --radius: 10px;
   --inp-height: 48px;
+
+  /* colors variables  */
+  --new-dark-color: #000;
+  --new-el-bg-color: #bbbbbb;
 }
 
 body {
@@ -38,21 +42,21 @@ a:hover {
   color: initial;
 }
 
-/* .p-t {
-  padding-top: var(--space-lg);
-} */
-
-/* .p-b {
-  padding-bottom: var(--space-lg);
-} */
-
-.p-l {
-  padding-left: 40px;
+.p-t {
+  padding-top: 50px;
 }
 
-/* .p-r {
-  padding-right: var(--space-md);
-} */
+.p-b {
+  padding-bottom: 50px;
+}
+
+.p-l {
+  padding-left: 80px;
+}
+
+.p-r {
+  padding-right: 80px;
+}
 
 .sidebar {
   width: var(--sidebar-width);
@@ -61,4 +65,16 @@ a:hover {
 .page-content {
   transition: 0.3s;
   width: calc(100% - var(--sidebar-width));
+}
+
+.our-btn {
+  background: var(--new-el-bg-color);
+  height: 35px;
+  border-radius: 5px;
+  color: var(--text-color);
+  min-width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
 }
