--- a/src/styles/createDataset/splitData.module.css
+++ b/src/styles/createDataset/splitData.module.css
@@ -1,1 +1,20 @@
-/* demodata */
+.splitDataTitle {
+  color: var(--new-dark-color);
+}
+
+.splitDataArea {
+  margin-top: 80px;
+}
+
+.splitDataLabels {
+  margin-bottom: var(--space-md);
+}
+
+.splitDataSave {
+  margin-top: 30px;
+}
+
+.saveBtn {
+  border: none !important;
+  text-transform: capitalize;
+}
