--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -99,3 +99,34 @@ a:hover {
   background-color: var(--n-btn-hover-color);
   color: #fff;
 }
+
+.continueButton {
+  background-color: var(--new-gray-color);
+  height: 40px;
+  min-width: 200px;
+  padding: 0 10px;
+  border-radius: 10px;
+  color: var(--text-color);
+  border: none;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.MuiSlider-rail {
+  background-color: var(--new-gray-color) !important;
+  height: 10px !important;
+  opacity: .7 !important;
+}
+
+.MuiSlider-track {
+  opacity: 1 !important;
+  background-color: var(--new-gray-color) !important;
+  height: 10px !important;
+  border: none !important;
+}
+
+.MuiSlider-thumb {
+  background: #fff !important;
+  box-shadow: 0 0 10px rgb(0 0 0 / 30%) !important;
+  border: 1px solid var(--new-dark-color) !important;
+}
